test/arrays/bradc/slices/sliceUnboundedOOB.good
A is: 1.0 2.0 3.0
A[1..] is: 1.0 2.0 3.0
A[2..] is: 2.0 3.0
A[3..] is: 3.0
sliceUnboundedOOB.chpl:6: error: halt reached - array index out of bounds: (4)
